# fiskeriAnlegg

./: README.md
Stim/: .gitignore  build.gradle  settings.gradle
Stim/app/: CMakeLists.txt  build.gradle
Stim/app/src/androidTest/java/no/uio/ifi/team16/stim/: ExampleInstrumentedTest.kt
Stim/app/src/androidTest/java/no/uio/ifi/team16/stim/data/dataLoader/: DataLoaderTest.kt  InfectiousPressureDataLoaderTest.kt  InfectiousPressureTimeSeriesDataLoaderTest.kt  NorKyst800AtSiteDataLoaderTest.kt  NorKyst800DataLoaderTest.kt
Stim/app/src/androidTest/java/no/uio/ifi/team16/stim/data/repository/: AddressRepositoryTest.kt  StereographicProjectionTest.kt  WeatherRepositoryTest.kt
Stim/app/src/androidTest/java/no/uio/ifi/team16/stim/io/viewModel/: MainActivityViewModelTest.kt
Stim/app/src/androidTest/java/no/uio/ifi/team16/stim/mainActivityTest/: mainActivityTest.kt
Stim/app/src/main/: AndroidManifest.xml
Stim/app/src/main/cpp/: NorKyst800FimexDataLoader.cpp  NorKyst800FimexDataLoader.h  prepare-fimex.bat
Stim/app/src/main/cpp/norkloader/: CMakeLists.txt
Stim/app/src/main/cpp/norkloader/src/: NorKyst800FimexDataLoader.cpp
Stim/app/src/main/java/no/uio/ifi/team16/stim/: AppInfoFragment.kt  BaseApplication.kt  ChartValueFormatter.kt  FavoriteSitesFragment.kt  GeneralInfoFragment.kt  GeneralLineStyle.kt  InfectionFragment.kt  InfectionLineStyle.kt  InfectiousIconStatusDialogFragment.kt  MainActivity.kt  MainActivityViewModel.kt  MapActivity.kt  MapFragment.kt  NoDataStatusDialogFragment.kt  OpeningScreen.kt  SalinityLineStyle.kt  SaltFragment.kt  SiteInfoFragment.kt  SiteListFragment.kt  SitesFromMapFragment.kt  SparkLineStyle.kt  SpeedDialTest.kt  StartPageFragment.kt  StatusDialogFragment.kt  StimActivity.kt  StimFragment.kt  TempValueFormatter.kt  TemperatureLineStyle.kt  TimeValueFormatter.kt  TutorialActivity.kt  TutorialFragment.kt  TutorialSlide1Fragment.kt  TutorialSlideFragment.kt  WaterFragment.kt  WeatherFragment.kt  WeekValueFormatter.kt
Stim/app/src/main/java/no/uio/ifi/team16/stim/adapter/: RecycleviewAdapter.kt
Stim/app/src/main/java/no/uio/ifi/team16/stim/data/: BarentsWatchAtSite.kt  BarentsWatchToken.kt  InfectiousPressure.kt  InfectiousPressureDataloader.kt  InfectiousPressureRepository.kt  InfectiousPressureTimeSeries.kt  NorKyst800.kt  NorKyst800AtSite.kt  Site.kt  Sites.kt  StaticMapImageLoader.kt  Weather.kt
Stim/app/src/main/java/no/uio/ifi/team16/stim/data/dataLoader/: AddressDataLoader.kt  BarentsWatchDataLoader.kt  InfectiousPressureDataLoader.kt  InfectiousPressureTimeSeriesDataLoader.kt  NorKyst800AtSiteDataLoader.kt  NorKyst800DataLoader.kt  SitesDataLoader.kt  THREDDSDataLoader.kt  WeatherDataLoader.kt
Stim/app/src/main/java/no/uio/ifi/team16/stim/data/dataLoader/parser/: BarentsWatchDataLoader.kt  NorKyst800Parser.kt  NorKyst800RegexParser.kt
Stim/app/src/main/java/no/uio/ifi/team16/stim/data/repository/: AddressRepository.kt  BarentsWatchRepository.kt  InfectiousPressureRepository.kt  InfectiousPressureTimeSeriesRepository.kt  NorKyst800AtSiteRepository.kt  NorKyst800Repository.kt  Repository.kt  SitesRepository.kt  WeatherRepository.kt
Stim/app/src/main/java/no/uio/ifi/team16/stim/fragment/: AppInfoFragment.kt  FavoriteSitesFragment.kt  InfectionFragment.kt  InfectiousIconStatusDialogFragment.kt  MapFragment.kt  NoDataStatusDialogFragment.kt  SiteInfoFragment.kt  StimFragment.kt  TutorialSlideFragment.kt  WaterFragment.kt  WeatherFragment.kt
Stim/app/src/main/java/no/uio/ifi/team16/stim/io/: Test.kt
Stim/app/src/main/java/no/uio/ifi/team16/stim/io/adapter/: RecycleviewAdapter.kt
Stim/app/src/main/java/no/uio/ifi/team16/stim/io/viewModel/: MainActivityViewModel.kt  MapActivityViewModel.kt  RecycleviewAdapter.kt
Stim/app/src/main/java/no/uio/ifi/team16/stim/model/: MainActivityViewModel.kt
Stim/app/src/main/java/no/uio/ifi/team16/stim/model/adapter/: RecycleviewAdapter.kt
Stim/app/src/main/java/no/uio/ifi/team16/stim/model/viewModel/: MainActivityViewModel.kt  RecycleviewAdapter.kt
Stim/app/src/main/java/no/uio/ifi/team16/stim/util/: Extensions.kt  InfectionStatusCalculator.kt  LatLng.kt  LatLong.kt  NDFloatArray.kt  Options.kt  Projection.kt
Stim/app/src/main/java/no/uio/ifi/team16/stim/util/linestyle/: TemperatureLineStyle.kt
Stim/app/src/main/res/drawable/: bottom_header.xml  heart.xml  ic_baseline_directions_boat_filled_24.xml  ic_clearsky_day.xml  ic_cloudy.xml  ic_lightrain.xml  ic_lightsnow.xml  ic_search.xml  long_circle.xml
Stim/app/src/main/res/font/: montserrat_light_italic.xml
Stim/app/src/main/res/layout/: activity_main.xml  activity_map.xml  fragment_app_info.xml  fragment_dialog_status.xml  fragment_dialog_status_infection_info.xml  fragment_favorite_sites.xml  fragment_general_info.xml  fragment_infection.xml  fragment_map.xml  fragment_salt.xml  fragment_site_info.xml  fragment_start_page.xml  fragment_tutorial.xml  fragment_tutorial_slide1.xml  fragment_water.xml  fragment_weather.xml  header_bottomsheet.xml  header_bottomsheet_closed.xml  header_nav_drawer.xml  infection_table_row.xml  loading_screen.xml  opening_screen.xml  recycleview.xml  recycleview_element.xml  recycleview_element_overview.xml  speed_dial_test.xml  tutorial_slide.xml  tutorial_slide2.xml  tutorial_slide3.xml  tutorial_slide4.xml  tutorial_slide5.xml
Stim/app/src/main/res/menu/: drawer_menu.xml  map_toolbar.xml
Stim/app/src/main/res/navigation/: navigation.xml
Stim/app/src/main/res/values/: colors.xml  id.xml  preloaded_fonts.xml  strings.xml  themes.xml
Stim/app/src/main/res/values-night/: themes.xml
Stim/app/src/test/java/no/uio/ifi/team16/stim/: ExampleUnitTest.kt
Stim/gradle/wrapper/: gradle-wrapper.properties
